--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
 * {
 	margin: 0 auto;
 }
+
 .card {
 	width: 330px;
 	border: 1px solid #aeaeaf;
@@ -10,6 +11,7 @@
 	box-shadow: 10px 5px 10px #c4c4c4;
 
 }
+
 .picture {
 	max-width: 300px;
 	border: 1px solid #aeaeaf;
@@ -22,35 +24,38 @@
 .information {
 	max-width: 300px;
 	border: 1px solid #aeaeaf;
-	/* box-shadow: 5px 5px 5px #c4c4c4; */
 	border-radius: 15px; 
 	margin: 10px auto;
-
 	line-height: 130%;
 }
+
 h3 {
 	font-family: 'Merriweather', serif;
 	font-size: 2em;
 	margin: 15px;
 }
+
 .fact {
 	padding: 10px;
 	font-style: italic;
 	text-align: justify;
 }
+
 ul {
 	list-style-type: none;
 	padding-left: 10px;
 	text-align: justify;
 }
+
 span {
 	font-weight: bold;
 }
+
 .description {
 	padding: 10px;
 	text-align: justify;
-
 }
+
 .wrapper {
 	position: relative;
 	bottom: 80px;
@@ -63,26 +68,26 @@ span {
 	margin: 0 auto;
 	opacity: 0;
 }
+
 .img-wrap {
 	margin-bottom: -60px;
 }
+
 .img-wrap:hover .wrapper{
  	opacity: 1;
 }
+
 .img-wrap:hover .picture{
     opacity: 0.4;
 }
 
-#instagram {
+.instagram {
 	margin-bottom: 10px;
 	max-width: 300px;
 	font-style: italic;
 	text-align: right;
-	
 }
-#inst-pic {
-	max-width: 15px;
-}
+
 a {	
 	text-decoration: none;
 }
